# serializer version: 1
# name: test_all_entities[button.kitchen_alex_extra_screen_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.kitchen_alex_extra_screen_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alex Extra screen time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Alex Extra screen time',
    'platform': 'skylight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reward',
    'unique_id': '5455113_reward_900',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.kitchen_alex_extra_screen_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Alex Extra screen time',
      'point_value': 5,
      'redeemed_at': None,
      'respawn_on_redemption': True,
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen_alex_extra_screen_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.kitchen_alex_pizza_night-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.kitchen_alex_pizza_night',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alex Pizza night',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Alex Pizza night',
    'platform': 'skylight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reward',
    'unique_id': '5455113_reward_901',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.kitchen_alex_pizza_night-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Alex Pizza night',
      'point_value': 25,
      'redeemed_at': datetime.datetime(2026, 8, 7, 18, 0, tzinfo=datetime.timezone.utc),
      'respawn_on_redemption': True,
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen_alex_pizza_night',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.kitchen_sam_new_book-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.kitchen_sam_new_book',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sam New book',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sam New book',
    'platform': 'skylight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reward',
    'unique_id': '5455113_reward_902',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.kitchen_sam_new_book-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Sam New book',
      'point_value': 10,
      'redeemed_at': None,
      'respawn_on_redemption': True,
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen_sam_new_book',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
